<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/shapeNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_shape"
        android:textSize="24sp"/>

    <ImageView
        android:id="@+id/shapeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/circle"
        android:contentDescription="@string/shape_image_description"/>

    <Button
        android:id="@+id/buttonCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circle"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:id="@+id/buttonSquare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/square"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:id="@+id/buttonTriangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/triangle"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:id="@+id/buttonRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:id="@+id/buttonGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:id="@+id/buttonBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        style="?android:attr/buttonBarButtonStyle"/>

</LinearLayout>